@@ -3,9 +3,7 @@ package no.vegvesen.ixn.federation;
 import no.vegvesen.ixn.federation.model.capability.*;
 import org.junit.Test;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -19,8 +17,8 @@ public class MessageValidatingSelectorCreatorTest {
                                 "pub-1",
                                 "NO",
                                 "DENM:1.2.2",
-                                new HashSet<>(Arrays.asList("123","122")),
-                                new HashSet<>(Arrays.asList(6, 5))
+                                List.of("123","122"),
+                                List.of(6, 5)
                         ),
                         new Metadata()
                 )
@@ -44,7 +42,7 @@ public class MessageValidatingSelectorCreatorTest {
                                 "pub-1",
                                 "NO",
                                 "1.0",
-                                new HashSet<>(Arrays.asList("122,123"))
+                                List.of("122,123")
                         ),
                         new Metadata()
                 )
@@ -67,7 +65,7 @@ public class MessageValidatingSelectorCreatorTest {
                                 "pub-1",
                                 "NO",
                                 "1.0",
-                                new HashSet<>(Arrays.asList("1")),
+                                List.of("1"),
                                 "Weather"
                         ),
                         new Metadata()
